[project]
name = "nlp-tf"
version = "0.1.0"
description = ""
authors = [
    {name = "klxcoder",email = "klxcoder@gmail.com"}
]
readme = "README.md"
requires-python = "^3.9"
dependencies = [
    "tensorflow (==2.16.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
